--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "social-gaming-review",
   "version": "0.1.0",
+  "proxy": "http://localhost:3002",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,7 +11,9 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.8.3",
+    "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
